# vuili

./: .gitignore  CMakeLists.txt  README.md  meson.build
cmake_tools/: BuildConfig.cmake  CMakeOutputDirectory.cmake
src/: CMakeLists.txt  TODO.md  config.h  input.md  internal.h  v-ui.h  viewport.h  viewport.md  vuili-types.h  vuili.c  vuili.h
src/glad/include/glad/: gl.h
src/glfw/src/: CMakeLists.txt
src/shaders/: fragment.glsl  vertex.glsl
src/tests/: test-window.c
src/utils/: log.c  log.h
subprojects/glfw/src/: CMakeLists.txt
tests/: CMakeLists.txt  test-window.c
